<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

    <ImageView
        android:id="@+id/tv_logo"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_schedulous_logo" />

    <LinearLayout
        android:id="@+id/ll_interface_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_theme_button"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/getstarted"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_user_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:hint="@string/mobile_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_action_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/theme_button"
            android:gravity="center"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>